package org.juheinz.navigation;

public class GPS {

    public static int getCurrentLocation() {
        return (int) ((Math.random() * (10 - 1)) + 1);

    }

}
